[gd_scene load_steps=18 format=2]

[ext_resource path="res://Sprites/Tilesets/Water.png" type="Texture" id=1]
[ext_resource path="res://NTID/Block.tscn" type="PackedScene" id=2]
[ext_resource path="res://NTID/Sign1.tscn" type="PackedScene" id=3]
[ext_resource path="res://Sprites/Tilesets/Hills.png" type="Texture" id=4]
[ext_resource path="res://Player/Player.tscn" type="PackedScene" id=5]
[ext_resource path="res://NTID/Interpreter.tscn" type="PackedScene" id=6]
[ext_resource path="res://NTID/NTIDLevel.gd" type="Script" id=7]
[ext_resource path="res://NTID/Interpreter.gd" type="Script" id=8]
[ext_resource path="res://Sprites/Tilesets/Wooden_House_Walls_Tilset.png" type="Texture" id=9]
[ext_resource path="res://Tree/Tree.tscn" type="PackedScene" id=10]
[ext_resource path="res://Bush/Bush.tscn" type="PackedScene" id=11]
[ext_resource path="res://Sprites/Tilesets/Tilled_Dirt_v2.png" type="Texture" id=12]
[ext_resource path="res://NTID/FadeToBlack.tscn" type="PackedScene" id=13]
[ext_resource path="res://NTID/Arrow.tscn" type="PackedScene" id=14]

[sub_resource type="TileSet" id=24]
0/name = "Hills.png 0"
0/texture = ExtResource( 4 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 176, 80 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[sub_resource type="TileSet" id=25]
0/name = "Tilled_Dirt_v2.png 0"
0/texture = ExtResource( 12 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 176, 112 )
0/tile_mode = 1
0/autotile/bitmask_mode = 1
0/autotile/bitmask_flags = [ Vector2( 0, 0 ), 432, Vector2( 0, 1 ), 438, Vector2( 0, 2 ), 54, Vector2( 0, 3 ), 48, Vector2( 1, 0 ), 504, Vector2( 1, 1 ), 511, Vector2( 1, 2 ), 63, Vector2( 1, 3 ), 56, Vector2( 2, 0 ), 216, Vector2( 2, 1 ), 219, Vector2( 2, 2 ), 27, Vector2( 2, 3 ), 24, Vector2( 3, 0 ), 144, Vector2( 3, 1 ), 146, Vector2( 3, 2 ), 18, Vector2( 3, 3 ), 16, Vector2( 4, 0 ), 176, Vector2( 4, 1 ), 182, Vector2( 4, 2 ), 434, Vector2( 4, 3 ), 50, Vector2( 4, 4 ), 178, Vector2( 5, 0 ), 248, Vector2( 5, 1 ), 255, Vector2( 5, 2 ), 507, Vector2( 5, 3 ), 59, Vector2( 5, 4 ), 251, Vector2( 6, 0 ), 440, Vector2( 6, 1 ), 447, Vector2( 6, 2 ), 510, Vector2( 6, 3 ), 62, Vector2( 6, 4 ), 446, Vector2( 7, 0 ), 152, Vector2( 7, 1 ), 155, Vector2( 7, 2 ), 218, Vector2( 7, 3 ), 26, Vector2( 7, 4 ), 154, Vector2( 8, 0 ), 184, Vector2( 8, 1 ), 191, Vector2( 8, 2 ), 506, Vector2( 8, 3 ), 58, Vector2( 8, 4 ), 186, Vector2( 9, 0 ), 443, Vector2( 9, 1 ), 254, Vector2( 9, 2 ), 442, Vector2( 9, 3 ), 190, Vector2( 10, 2 ), 250, Vector2( 10, 3 ), 187 ]
0/autotile/icon_coordinate = Vector2( 3, 3 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0
1/name = "Tilled_Dirt_v2.png 1"
1/texture = ExtResource( 12 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 176, 96 )
1/tile_mode = 2
1/autotile/icon_coordinate = Vector2( 0, 0 )
1/autotile/tile_size = Vector2( 16, 16 )
1/autotile/spacing = 0
1/autotile/occluder_map = [  ]
1/autotile/navpoly_map = [  ]
1/autotile/priority_map = [  ]
1/autotile/z_index_map = [  ]
1/occluder_offset = Vector2( 0, 0 )
1/navigation_offset = Vector2( 0, 0 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape_one_way = false
1/shape_one_way_margin = 0.0
1/shapes = [  ]
1/z_index = 0

[sub_resource type="TileSet" id=20]
0/name = "Wooden_House_Walls_Tilset.png 0"
0/texture = ExtResource( 9 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 80, 48 )
0/tile_mode = 2
0/autotile/icon_coordinate = Vector2( 0, 0 )
0/autotile/tile_size = Vector2( 16, 16 )
0/autotile/spacing = 0
0/autotile/occluder_map = [  ]
0/autotile/navpoly_map = [  ]
0/autotile/priority_map = [  ]
0/autotile/z_index_map = [  ]
0/occluder_offset = Vector2( 0, 0 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape_one_way = false
0/shape_one_way_margin = 0.0
0/shapes = [  ]
0/z_index = 0

[node name="NTIDLevel" type="Node2D"]
position = Vector2( 0, 1 )
script = ExtResource( 7 )

[node name="RIT" type="Node2D" parent="."]

[node name="Background2" type="Sprite" parent="RIT"]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )
region_filter_clip = true

[node name="HillsTilemap2" type="TileMap" parent="RIT"]
tile_set = SubResource( 24 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 2, 131071, 0, 131072, 65536, 0, 65542, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65538, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65538, 196608, 0, 65540, 196609, 0, 131073, 196610, 0, 65542, 196611, 0, 65537, 196612, 0, 65541, 196613, 0, 131073, 196614, 0, 131073, 196615, 0, 65542, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65538, 262144, 0, 65539, 262146, 0, 65536, 262147, 0, 65537, 262148, 0, 65538, 262151, 0, 65536, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65538, 327680, 0, 65539, 327682, 0, 131072, 327683, 0, 65542, 327684, 0, 131077, 327685, 0, 1, 327686, 0, 1, 327687, 0, 131078, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65538, 393216, 0, 65539, 393219, 0, 131072, 393220, 0, 131073, 393221, 0, 65542, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65537, 393231, 0, 65537, 393232, 0, 65537, 393233, 0, 65537, 393234, 0, 65538, 458752, 0, 65539, 458757, 0, 65536, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65537, 458767, 0, 65537, 458768, 0, 65537, 458769, 0, 65537, 458770, 0, 65538, 524288, 0, 65539, 524293, 0, 65536, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65537, 524303, 0, 65537, 524304, 0, 65537, 524305, 0, 65537, 524306, 0, 65538, 589824, 0, 65539, 589826, 0, 0, 589827, 0, 1, 589828, 0, 1, 589829, 0, 131078, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65537, 589839, 0, 65537, 589840, 0, 65537, 589841, 0, 65537, 589842, 0, 65538, 720895, 0, 196608, 655360, 0, 196616, 655361, 0, 196609, 655362, 0, 196614, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 131073, 655372, 0, 131073, 655373, 0, 131073, 655374, 0, 131073, 655375, 0, 131073, 655376, 0, 131073, 655377, 0, 131073, 655378, 0, 131074 )

[node name="DirtTilemap" type="TileMap" parent="RIT"]
tile_set = SubResource( 25 )
cell_size = Vector2( 16, 16 )
cell_custom_transform = Transform2D( 16, 0, 0, 16, 0, 0 )
format = 1
tile_data = PoolIntArray( 262154, 0, 0, 262155, 0, 1, 262156, 0, 1, 262157, 0, 1, 262158, 0, 1, 262159, 0, 1, 262160, 0, 1, 262161, 0, 1, 262162, 0, 2, 327690, 0, 131072, 327691, 0, 131073, 327692, 0, 131073, 327693, 0, 131073, 327694, 0, 131073, 327695, 0, 131073, 327696, 0, 131073, 327697, 0, 131073, 327698, 0, 131074, 393233, 1, 262144 )

[node name="RoomTileMap2" type="TileMap" parent="RIT"]
tile_set = SubResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 2, 65536, 0, 0, 65537, 0, 65540, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65539, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 2, 131072, 0, 65536, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65538, 196608, 0, 65536, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65538, 262144, 0, 65536, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 4, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65538, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65538, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 3, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131074, 589824, 0, 131072, 589825, 0, 131073, 589826, 0, 131075, 589827, 0, 131073, 589828, 0, 131075, 589829, 0, 131073, 589830, 0, 131075, 589831, 0, 131073, 589832, 0, 131075, 589833, 0, 131074 )

[node name="RoomTileMap" type="TileMap" parent="RIT"]
tile_set = SubResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 0, 0, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 2, 65536, 0, 1, 65537, 0, 65540, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65539, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 2, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65538, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65538, 262144, 0, 3, 262145, 0, 1, 262146, 0, 1, 262147, 0, 1, 262148, 0, 1, 262149, 0, 1, 262150, 0, 1, 262151, 0, 4, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 327680, 0, 65538, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65536, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 393216, 0, 65538, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65538, 458752, 0, 65538, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65538, 524288, 0, 65538, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65536, 524296, 0, 65537, 524297, 0, 3, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131074, 589824, 0, 1, 589825, 0, 131073, 589826, 0, 131075, 589827, 0, 131073, 589828, 0, 131075, 589829, 0, 131073, 589830, 0, 131075, 589831, 0, 131073, 589832, 0, 131075, 589833, 0, 131074 )

[node name="StaticBody2D" type="StaticBody2D" parent="RIT"]

[node name="Collisions1_scene1" type="CollisionPolygon2D" parent="RIT/StaticBody2D"]
visible = false
position = Vector2( 1, 2 )
polygon = PoolVector2Array( 1, 165, -38, 52, -39, 12, -1, -1, 1, -3, 2, 0, 299, -1, 132, 2, 131, 15, 212, 15, 212, 62, 208, 62, 207, 30, 128, 29, 126, 14, 31, 13, 32, 29, -19, 31, -29, 55, 3, 163, 301, 165, 302, 3, 316, -2, 323, -4, 324, 183, -3, 183 )

[node name="Collisions2_scene1" type="CollisionPolygon2D" parent="RIT/StaticBody2D"]
visible = false
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 0, 160, 3, 64, 8, 64, 128, 65, 128, 80, 129, 96, 124, 96, 125, 80, 6, 80, 6, 145, 124, 144, 124, 128, 128, 128, 129, 144, 144, 145, 145, 129, 209, 129, 208, 96, 213, 96, 213, 129, 213, 143, 149, 144, 148, 160, 12, 161 )

[node name="Collisions3_scene1" type="CollisionPolygon2D" parent="RIT/StaticBody2D"]
visible = false
position = Vector2( 1, 2 )
polygon = PoolVector2Array( 2, 63, 1, 63, 2, 3, -1, -3, 1, 3 )

[node name="Bushes" type="YSort" parent="RIT"]

[node name="Bush" parent="RIT/Bushes" instance=ExtResource( 11 )]
position = Vector2( 147, 11 )

[node name="Bush2" parent="RIT/Bushes" instance=ExtResource( 11 )]
position = Vector2( 223, 114 )

[node name="Bush3" parent="RIT/Bushes" instance=ExtResource( 11 )]
position = Vector2( 223, 59 )

[node name="Bush4" parent="RIT/Bushes" instance=ExtResource( 11 )]
position = Vector2( 158, 152 )

[node name="Trees" type="YSort" parent="RIT"]

[node name="Tree" parent="RIT/Trees" instance=ExtResource( 10 )]
position = Vector2( 245, 22 )

[node name="Tree2" parent="RIT/Trees" instance=ExtResource( 10 )]
position = Vector2( 231, 142 )

[node name="Tree3" parent="RIT/Trees" instance=ExtResource( 10 )]
position = Vector2( 260, 127 )

[node name="FadeToBlack" parent="RIT" instance=ExtResource( 13 )]
visible = false

[node name="Interpreter" parent="RIT" instance=ExtResource( 6 )]
position = Vector2( 168, 71 )
script = ExtResource( 8 )

[node name="TIGER" type="Node2D" parent="."]
visible = false

[node name="Background2" type="Sprite" parent="TIGER"]
position = Vector2( 160, 90 )
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 0, 0, 320, 180 )
region_filter_clip = true

[node name="HillsTilemap2" type="TileMap" parent="TIGER"]
tile_set = SubResource( 24 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 65535, 0, 0, 0, 0, 1, 1, 0, 1, 2, 0, 1, 3, 0, 1, 4, 0, 1, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 1, 9, 0, 1, 10, 0, 1, 11, 0, 1, 12, 0, 1, 13, 0, 1, 14, 0, 1, 15, 0, 1, 16, 0, 1, 17, 0, 1, 18, 0, 1, 19, 0, 1, 20, 0, 2, 131071, 0, 65536, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 65545, 0, 65537, 65546, 0, 65537, 65547, 0, 65537, 65548, 0, 65537, 65549, 0, 65537, 65550, 0, 65537, 65551, 0, 65537, 65552, 0, 65537, 65553, 0, 65537, 65554, 0, 65537, 65555, 0, 65537, 65556, 0, 65538, 196607, 0, 65536, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65538, 262143, 0, 65536, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65538, 327679, 0, 65536, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262147, 0, 65537, 262148, 0, 65537, 262149, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 65537, 262158, 0, 65537, 262159, 0, 65537, 262160, 0, 65537, 262161, 0, 65537, 262162, 0, 65537, 262163, 0, 65537, 262164, 0, 65538, 393215, 0, 65536, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327685, 0, 65537, 327686, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65537, 327694, 0, 65537, 327695, 0, 65537, 327696, 0, 65537, 327697, 0, 65537, 327698, 0, 65537, 327699, 0, 65537, 327700, 0, 65538, 458751, 0, 65536, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65537, 393230, 0, 65541, 393231, 0, 131073, 393232, 0, 131073, 393233, 0, 131073, 393234, 0, 131073, 393235, 0, 131073, 393236, 0, 131074, 524287, 0, 65536, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65537, 458766, 0, 65538, 589823, 0, 65536, 524288, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537, 524297, 0, 65537, 524298, 0, 65537, 524299, 0, 65537, 524300, 0, 65537, 524301, 0, 65537, 524302, 0, 65538, 655359, 0, 131072, 589824, 0, 65542, 589825, 0, 65537, 589826, 0, 65537, 589827, 0, 65537, 589828, 0, 65537, 589829, 0, 65537, 589830, 0, 65537, 589831, 0, 65537, 589832, 0, 65537, 589833, 0, 65537, 589834, 0, 65537, 589835, 0, 65537, 589836, 0, 65537, 589837, 0, 65537, 589838, 0, 65538, 655360, 0, 131072, 655361, 0, 131073, 655362, 0, 131073, 655363, 0, 131073, 655364, 0, 131073, 655365, 0, 131073, 655366, 0, 131073, 655367, 0, 131073, 655368, 0, 131073, 655369, 0, 131073, 655370, 0, 131073, 655371, 0, 131073, 655372, 0, 131073, 655373, 0, 131073, 655374, 0, 131074 )

[node name="RoomTileMap" type="TileMap" parent="TIGER"]
tile_set = SubResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 1, 0, 1, 2, 0, 1, 65536, 0, 65537, 65537, 0, 65537, 65538, 0, 65537, 65539, 0, 65537, 65540, 0, 65537, 65541, 0, 65537, 65542, 0, 65537, 65543, 0, 65537, 65544, 0, 65537, 131072, 0, 65537, 131073, 0, 65537, 131074, 0, 65537, 131075, 0, 65537, 131076, 0, 65537, 131077, 0, 65537, 131078, 0, 65537, 131079, 0, 65537, 131080, 0, 65537, 131081, 0, 65537, 196608, 0, 65537, 196609, 0, 65537, 196610, 0, 65537, 196616, 0, 65537, 196617, 0, 65537, 262144, 0, 65537, 262145, 0, 65537, 262146, 0, 65537, 262148, 0, 65537, 262150, 0, 65537, 262151, 0, 65537, 262152, 0, 65537, 327680, 0, 65537, 327681, 0, 65537, 327682, 0, 65537, 327683, 0, 65537, 327684, 0, 65537, 327687, 0, 65537, 327688, 0, 65537, 393220, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 524289, 0, 65537, 524290, 0, 65537, 524291, 0, 65537, 524292, 0, 65537, 524293, 0, 65537, 524294, 0, 65537, 524295, 0, 65537, 524296, 0, 65537 )

[node name="RoomTileMap2" type="TileMap" parent="TIGER"]
tile_set = SubResource( 20 )
cell_size = Vector2( 16, 16 )
format = 1
tile_data = PoolIntArray( 0, 0, 3, 2, 0, 1, 3, 0, 1, 4, 0, 131075, 5, 0, 1, 6, 0, 1, 7, 0, 1, 8, 0, 4, 65536, 0, 65538, 65544, 0, 65536, 65545, 0, 1, 65546, 0, 1, 65547, 0, 1, 65548, 0, 1, 65549, 0, 131073, 65550, 0, 131073, 65551, 0, 131073, 65552, 0, 131073, 65553, 0, 131073, 65554, 0, 131073, 65555, 0, 131073, 65556, 0, 131073, 131072, 0, 65538, 131080, 0, 65536, 131081, 0, 65537, 131082, 0, 65537, 131083, 0, 65537, 131084, 0, 65537, 131085, 0, 65537, 131086, 0, 65537, 131087, 0, 65537, 131088, 0, 65537, 131089, 0, 65537, 131090, 0, 65537, 131091, 0, 65537, 131092, 0, 65537, 196608, 0, 65538, 196611, 0, 65537, 196612, 0, 65537, 196613, 0, 65537, 196614, 0, 65537, 196615, 0, 65537, 196616, 0, 65536, 196617, 0, 65537, 196618, 0, 65537, 196619, 0, 65537, 196620, 0, 65537, 196621, 0, 65537, 196622, 0, 65537, 196623, 0, 65537, 196624, 0, 65537, 196625, 0, 65537, 196626, 0, 65537, 196627, 0, 65537, 196628, 0, 65537, 262144, 0, 65538, 262147, 0, 65537, 262149, 0, 65537, 262152, 0, 65536, 262153, 0, 65537, 262154, 0, 65537, 262155, 0, 65537, 262156, 0, 65537, 262157, 0, 3, 262158, 0, 131073, 262159, 0, 131073, 262160, 0, 131073, 262161, 0, 131073, 262162, 0, 131073, 262163, 0, 131073, 262164, 0, 131073, 393215, 0, 131073, 327680, 0, 131074, 327683, 0, 65537, 327684, 0, 1, 327685, 0, 1, 327686, 0, 1, 327687, 0, 1, 327688, 0, 65540, 327689, 0, 65537, 327690, 0, 65537, 327691, 0, 65537, 327692, 0, 65537, 327693, 0, 65538, 458751, 0, 65537, 393216, 0, 65537, 393217, 0, 65537, 393218, 0, 65537, 393219, 0, 65537, 393220, 0, 65537, 393221, 0, 65537, 393222, 0, 65537, 393223, 0, 65537, 393224, 0, 65537, 393225, 0, 65537, 393226, 0, 65537, 393227, 0, 65537, 393228, 0, 65537, 393229, 0, 65538, 524287, 0, 65537, 458752, 0, 65537, 458753, 0, 65537, 458754, 0, 65537, 458755, 0, 65537, 458756, 0, 65537, 458757, 0, 65537, 458758, 0, 65537, 458759, 0, 65537, 458760, 0, 65537, 458761, 0, 65537, 458762, 0, 65537, 458763, 0, 65537, 458764, 0, 65537, 458765, 0, 65538, 589823, 0, 131073, 524288, 0, 131073, 524289, 0, 131073, 524290, 0, 131075, 524291, 0, 131073, 524292, 0, 131073, 524293, 0, 131073, 524294, 0, 131075, 524295, 0, 131073, 524296, 0, 131075, 524297, 0, 131073, 524298, 0, 131073, 524299, 0, 131073, 524300, 0, 131073, 524301, 0, 131074 )

[node name="StaticBody2D" type="StaticBody2D" parent="TIGER"]
visible = false

[node name="Collisions1_scene2" type="CollisionPolygon2D" parent="TIGER/StaticBody2D"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 210, 128, 208, 64, 321, 65, 320, 179, 1, 180, -4, 129 )
disabled = true

[node name="Collisions2_scene2" type="CollisionPolygon2D" parent="TIGER/StaticBody2D"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 2, 96, 1, 1, 321, 3, 321, 32, 321, 65, 318, 32, 144, 32, 144, 96, 64, 96, 66, 81, 140, 80, 139, 14, 5, 14, 5, 95 )
disabled = true

[node name="Collisions3_scene2" type="CollisionPolygon2D" parent="TIGER/StaticBody2D"]
position = Vector2( -1, 0 )
polygon = PoolVector2Array( 3, 108, 2, 81, 1, 143 )

[node name="Interpreter" parent="TIGER" instance=ExtResource( 6 )]
position = Vector2( 169, 37 )
script = ExtResource( 8 )

[node name="Player" parent="." instance=ExtResource( 5 )]
position = Vector2( 287, 78 )

[node name="Sign1" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 49, 95 )
scale = Vector2( 0.7, 0.7 )

[node name="Sign2" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 74, 95 )
scale = Vector2( 0.7, 0.7 )

[node name="Sign3" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 97, 95 )
scale = Vector2( 0.7, 0.7 )

[node name="Sign4" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 120, 95 )
scale = Vector2( 0.7, 0.7 )

[node name="Sign5" parent="." instance=ExtResource( 3 )]
visible = false
position = Vector2( 143, 95 )
scale = Vector2( 0.7, 0.7 )

[node name="Block" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 53, 73 )

[node name="Block2" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 77, 73 )

[node name="Block3" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 100, 73 )

[node name="Block4" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 123, 73 )

[node name="Block5" parent="." instance=ExtResource( 2 )]
visible = false
position = Vector2( 146, 73 )

[node name="Timer" type="Timer" parent="."]

[node name="Arrow" parent="." instance=ExtResource( 14 )]
visible = false
position = Vector2( 26, 33 )

[connection signal="area_entered" from="RIT/Interpreter" to="." method="_on_Interpreter_area_entered"]
[connection signal="area_exited" from="RIT/Interpreter" to="." method="_on_Interpreter_area_exited"]
[connection signal="area_entered" from="TIGER/Interpreter" to="." method="_on_Interpreter_area_entered"]
[connection signal="area_exited" from="TIGER/Interpreter" to="." method="_on_Interpreter_area_exited"]
